# ProjectTrade

./: .gitignore
.github/workflows/: gemini-review.yml  rust.yml
backend/: .gitignore  Cargo.toml
backend/.sqlx/: query-1b7580d4870e1d43d80297bff6a45a7d9e2dc32da6fdd1fa5c23576ce46cdeb0.json
backend/migrations/: 20250907085428_create_user_table.sql  20250920152242_create_user_balance_table.sql  20250920152247_create_portfolio_table.sql  20251115114434_create_stock_price_table.sql  20251116082401_create_orders_table.sql  20251214060510_create_sessions_table.sql  20260104083017_update_users_money.sql  20260107110025_create_transactions_table.sql  20260110190000_create_loans_table.sql
backend/src/: app_state.rs  lib.rs  main.rs
backend/src/authentication/: basic_client.rs  mod.rs
backend/src/models/: authentication.rs  loan.rs  mod.rs  order.rs  portfolio_ticker.rs  stock_ticker.rs  stock_trade.rs  transaction.rs  user.rs
backend/src/models/errors/: api_error.rs  mod.rs  ticker_error.rs  trade_error.rs  user_error.rs
backend/src/routes/: account_handler.rs  health.rs  loan_handler.rs  middleware.rs  mod.rs  oms_handler.rs  portfolio_handler.rs  router.rs  ticker_handler.rs  ticker_handlers.rs  user_handler.rs
backend/src/services/: account_management_service.rs  bankruptcy_service.rs  loan_service.rs  market_maker_service.rs  mod.rs  order_management_service.rs  order_matchbook_service.rs  portfolio_management_service.rs  ticker_service.rs  trade_service.rs  user_service.rs  validation_strategy.rs
backend/tests/: handler_tests.rs  loan_service_tests.rs  oms_tests.rs  order_matchbook_service_tests.rs  serviceTests.rs  tickerServiceTests.rs  user_service_tests.rs
documentation/: DesignDecisions.txt  MarketMaker.txt  ProjectTradeArchitecture.drawio  Roadmap.md  SQLSetups.txt  todoList.txt
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Components/: StockDashboard.tsx
frontend/src/Pages/: BuyStockPage.tsx  Homepage.tsx  LandingPage.tsx  LoanPage.tsx  LoginPage.tsx  OrderHistoryPage.tsx  PortfolioPage.tsx  StockPage.tsx
frontend/src/RequestResponseModels/: Portfolio_Response.ts
frontend/src/api/: account.ts  loans.ts  orderManagement.ts  (+2 more)
(+20 files in other folders)
