[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
alpha_vantage = "0.11.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"] }
reqwest = "0.12.22"
dotenv = "0.15"
uuid = { version = "1.18.1", features = ["v4"]}