[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
alpha_vantage = "0.11.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid","bigdecimal","chrono"] }
reqwest = { version = "0.12", features = ["json"] } 
dotenv = "0.15"
uuid = { version = "1.18.1", features = ["v4", "serde"]}
anyhow = "1.0"
num-traits = "0.2.19"
thiserror = "2.0.17"
strum = { version = "0.26", features = ["derive"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
oauth2 = "5.0"         
url = "2.5"
cookie = "0.18.1"
axum-extra = {version = "0.9", features = ["cookie"]}
chrono = "0.4.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand_distr = "0.4"
rand = "0.8"
[lib]
name = "backend"
path = "src/lib.rs"
